--- a/distro.html
+++ b/distro.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<title>One Brain Together - Distro Webstore</title>
-	<link rel="icon" type="image/x-icon" href="IWW.png">
 
 	<style>
 		table, th, td {
@@ -36,17 +35,17 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/987f39bc8ed002fd4df23693d149b9d56e7ad1e8/original.png" alt="Digital Deadstock Zine/OBT-Shirt Bundle" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/987f39bc8ed002fd4df23693d149b9d56e7ad1e8/original.png" alt="OBT Digital Deadstock Bundle" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">Digital Deadstock Zine/OBT-Shirt Bundle</p>
+  ">OBT Digital Deadstock Bundle</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
     font-weight: 600;
-  ">$39.99</p>
+  ">$39.99 - $49.99</p>
     <a target="_blank" href="https://square.link/u/Myma2iYP?src=embed" style="
     display: inline-block;
     font-size: 18px;
@@ -63,7 +62,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 </div>
 </td>
-    <td>  
+
+<td>  
 <div style="
   overflow: auto;
   display: flex;
@@ -77,12 +77,12 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/48f519660c1560f2f1e5e7f8b78b0cf6c090f0e0/original.png" alt="Digital Deadstock Phyisical Lookbook Zine" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/48f519660c1560f2f1e5e7f8b78b0cf6c090f0e0/original.png" alt="Digital Deadstock Print Zine" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">Digital Deadstock Phyisical Lookbook Zine</p>
+  ">Digital Deadstock Print Zine</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
@@ -104,7 +104,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 </div>
 </td>
-    <td>
+
+<td>
 <div style="
   overflow: auto;
   display: flex;
@@ -118,17 +119,17 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/d8c6bac368555957bbd21957af5e753601244cba/original.png" alt="OBT White/White Box Logo T-Shirt" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/3a573fab09ff20031929cb91eaa0c6d698fd1c47/original.png" alt="OBT x Hamzat Raheem &quot;Hamzat Collects Faces&quot; Tee" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">OBT White/White Box Logo T-Shirt</p>
+  ">OBT x Hamzat Raheem "Hamzat Collects Faces" Tee</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
     font-weight: 600;
-  ">$24.99</p>
+  ">$29.99</p>
     <a target="_blank" href="https://square.link/u/lyyjvCNg?src=embed" style="
     display: inline-block;
     font-size: 18px;
@@ -144,12 +145,12 @@
   </div>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 </div>
-</td>
-  </tr>
+</td> 
+</tr>
 
-
-  <tr>
-    <td><div style="
+<tr>
+<td>
+<div style="
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -162,12 +163,12 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/9b770990744de009a67f2d4ce5298d5e99b68bdd/original.png" alt="OBT Blue/White Box Logo Tee (L)" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/05330f9ca27d934cc1faac31a16852b9ddd41ab0/original.png" alt="OBT Blue/White Tee (L)" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">OBT Blue/White Box Logo Tee (L)</p>
+  ">OBT Blue/White Tee (L)</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
@@ -187,8 +188,10 @@
   ">Buy now</a>
   </div>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div></td>
-    <td>
+</div>
+</td>
+
+<td>
 <div style="
   overflow: auto;
   display: flex;
@@ -202,12 +205,12 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/4a9c766af4ed86ce25d2ee05e06f6e239f3bad13/original.png" alt="OBT White/Red Box Logo Tee (L)" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/222b1ddfe47f13bab77e42d9e30813459f8f557b/original.png" alt="OBT White/Red Tee (L)" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">OBT White/Red Box Logo Tee (L)</p>
+  ">OBT White/Red Tee (L)</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
@@ -229,7 +232,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 </div>
 </td>
-    <td><div style="
+
+<td>
+<div style="
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -242,12 +247,12 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/fdc2b29dcbf30a4576dfa5c4d47da51972db89bd/original.png" alt="OBT Teal/White Box Logo Tee (M)" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/799381ee03a0e8754039946c3ec56afc4062c585/original.png" alt="OBT Teal/White Tee (M)" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">OBT Teal/White Box Logo Tee (M)</p>
+  ">OBT Teal/White Tee (M)</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
@@ -269,6 +274,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 </div></td>
   </tr>
+
   <tr>
     <td><div style="
   overflow: auto;
@@ -283,17 +289,17 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/ea206562ee5f999b7cbe0880e1cbc41fad5c4082/original.png" alt="OBT Gray/Black Box Logo Sweatshirt (2XL)" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/ea206562ee5f999b7cbe0880e1cbc41fad5c4082/original.png" alt="OBT Gray/Black Sweatshirt (2XL)" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">OBT Gray/Black Box Logo Sweatshirt (2XL)</p>
+  ">OBT Gray/Black Sweatshirt (2XL)</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
     font-weight: 600;
-  ">$29.99</p>
+  ">$34.99</p>
     <a target="_blank" href="https://square.link/u/md2n1S2o?src=embed" style="
     display: inline-block;
     font-size: 18px;
@@ -323,17 +329,17 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/e08f549567d603c41cf60536400a20de3e6d3672/original.png" alt="OBT White/Black Box Logo Hoodie (XL)" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/e08f549567d603c41cf60536400a20de3e6d3672/original.png" alt="OBT White/Black Hoodie (XL)" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">OBT White/Black Box Logo Hoodie (XL)</p>
+  ">OBT White/Black Hoodie (XL)</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
     font-weight: 600;
-  ">$29.99</p>
+  ">$34.99</p>
     <a target="_blank" href="https://square.link/u/50mdHNGa?src=embed" style="
     display: inline-block;
     font-size: 18px;
