--- a/distro.html
+++ b/distro.html
@@ -77,12 +77,12 @@
   border-radius: 10px;
   font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
   ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/48f519660c1560f2f1e5e7f8b78b0cf6c090f0e0/original.png" alt="Digital Deadstock Print Zine" onerror="this.style.display='none'" style="width: 100%;">
+    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/48f519660c1560f2f1e5e7f8b78b0cf6c090f0e0/original.png" alt="Digital Deadstock Zine" onerror="this.style.display='none'" style="width: 100%;">
   <div style="padding: 20px;">
       <p style="
     font-size: 18px;
     line-height: 20px;
-  ">Digital Deadstock Print Zine</p>
+  ">Digital Deadstock Zine</p>
       <p style="
     font-size: 18px;
     line-height: 20px;
