--- a/distro.html
+++ b/distro.html
@@ -17,8 +17,8 @@
 <body>
 	<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
 
-	<h2><font color="#ff3400">DISTRO - One Brain Together official webstore</font></h2>
-
+	<h2><font color="#ff3400">DISTRO</font></h2>
+	<p><i>Official webstore v1 2023<br>All orders will be shipped within 1-2 weeks of being placed<br>For any inquiries, please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a></p>
 <table>
   <tr>
     <td>
