--- a/distro.html
+++ b/distro.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<title>One Brain Together - Distro Webstore</title>
+	<link rel="icon" type="image/x-icon" href="IWW.png">
+
 
 	<style>
 		table, th, td {
