--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@ p  {
 			<b>Please follow our Twitter</b>
 				</font></a>
 		</p>
+	        <hr style="border: 1px solid rgb(2, 2, 2);">
+			<h3><a href="https://onebraintogether.com/distro"><font color="red">DISTRO - ONE BRAIN TOGETHER OFFICIAL WEBSTORE LIVE NOW</font></a></h3>
+		<hr style="border: 1px solid rgb(2, 2, 2);">
+
         <p>
 		<a href="https://instagram.com/onebraintogether/">	
 		<font face="times" size="2" color="purple">
