--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@ p  {
         <p><font color="black"> Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>.<p>
 	<a href="https://discord.gg/ntfcBEBYS3">
 		<font face="times" size="2" color="#6A5ACD">
-		<b>Please join our Discord</b>
+		<b>Discord</b>
            	</font>
 		</p>
 		        <p>
 			<a href="https://twitter.com/1braintogether/">
 			<font face="times" size="2" color="#00BFFF">
-			<b>Please follow our Twitter</b>
+			<b>Twitter</b>
 				</font></a>
 		</p>
 
         <p>
 		<a href="https://instagram.com/onebraintogether/">	
 		<font face="times" size="2" color="#C71585">
-			<b>Please follow our Instagram</b>
+			<b>Instagram</b>
 			</font></a>
 		</p>
 		        
