--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@ p  {
         <p><font color="black"> Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>.<p>
 	<a href="https://discord.gg/ntfcBEBYS3">
 		<font face="times" size="2" color="#6A5ACD">
-		<b>Discord     </b>
+		<b>Discord&emsp;</b>
            	</font>
 
 		<a href="https://twitter.com/1braintogether/">
 		<font face="times" size="2" color="#00BFFF">
-		<b>Twitter     </b>
+		<b>Twitter&emsp;</b>
 		</font></a>
 
 		<a href="https://instagram.com/onebraintogether/">	
