--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ p  {
   color: red;
   font-family: times;
 }
+		.links-container {
+			display: flex;
+			gap: 10px; /* You can adjust this value to control the space between the links */
+		}
 </style>
 </head>
 
@@ -34,21 +38,15 @@ p  {
             </font>	
         </h3>
         <p><font color="black"> Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>.<p>
-	<a href="https://discord.gg/ntfcBEBYS3">
-		<font face="times" size="2" color="#6A5ACD">
-		<b>Discord&emsp;</b>
-           	</font>
 
-		<a href="https://twitter.com/1braintogether/">
-		<font face="times" size="2" color="#00BFFF">
-		<b>Twitter&emsp;</b>
-		</font></a>
-
-		<a href="https://instagram.com/onebraintogether/">	
-		<font face="times" size="2" color="#C71585">
-		<b>Instagram</b>
-		</font></a>
-		</p>
+	<div class="links-container">
+		<a class="link" href="https://discord.gg/ntfcBEBYS3"><font face="times" size="2" color="#6A5ACD">
+Discord</font></a>
+		<a class="link" href="https://twitter.com/1braintogether/"><font face="times" size="2" color="#00BFFF">
+Twitter</font></a>
+		<a class="link" href="https://instagram.com/onebraintogether/"><font face="times" size="2" color="#C71585">
+Instagram</font></a>
+	</div>
 		        
         <hr style="border: 1px solid rgb(2, 2, 2);">
 		<h3><a href="https://onebraintogether.com/distro"><font color="#3400ff">DISTRO - ONE BRAIN TOGETHER OFFICIAL WEBSTORE LIVE NOW</font></a></h3>
