--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@ p  {
 			display: flex;
 			gap: 10px; /* You can adjust this value to control the space between the links */
 		}
+		.link {
+			font-family: Times, serif;
+			font-size: 16px;
+			font-weight: bold;
+			text-decoration: underline; /* Only underlines the link text */
+		}
 </style>
 </head>
 
@@ -34,7 +40,7 @@ p  {
 		<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
         <h3>
         	<font color="black">
-            <b>Internet Portal v0.1</b>
+            <b>Internet Portal v1</b>
             </font>	
         </h3>
         <p><font color="black"> Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>.<p>
