--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Instagram</font></a>
 	</div>
 		        
         <hr style="border: 1px solid rgb(2, 2, 2);">
-		<h3><a href="https://onebraintogether.com/distro"><font color="#39FF14">DISTRO - ONE BRAIN TOGETHER OFFICIAL WEBSTORE LIVE NOW</font></a></h3>
+		<h3><a href="https://onebraintogether.com/distro"><font color="#3400ff">DISTRO - ONE BRAIN TOGETHER OFFICIAL WEBSTORE LIVE NOW</font></a></h3>
 	<hr style="border: 1px solid rgb(2, 2, 2);">
         
         <h2>PROJECTS</h2>
