--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -57,7 +57,7 @@
 
 	<h2><font color="#ff3400">Digital Deadstock</font></h2>
 
-	<a href="https://www.onebraintogether.com/digitaldeadstock/distro" target="_blank"><button style="background-color: red; color: white; padding: 10px;">AVAILABLE NOW - CLICK HERE</button></a>
+	<a href="https://www.onebraintogether.com/distro" target="_blank"><button style="background-color: red; color: white; padding: 10px;">AVAILABLE NOW - CLICK HERE</button></a>
 
 	<p>Digital Deadstock is a sustainable apparel initiative by One Brain Together, bringing new life to secondhand clothing through community benefits, onchain utility, and exclusive art.</p>
 
