--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ p  {
 		<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
         <h3>
         	<font color="black">
-            <b>Internet Portal v1</b>
+            <b>Internet Portal v0.2</b>
             </font>	
         </h3>
         <p><font color="black"> Welcome. One Brain Together is a creative studio based in <b>[redacted]</b>.<p>
@@ -62,16 +62,14 @@ Instagram</font></a>
         
         <ul>
 		<li><font color="red">008 - </font><a href="digitaldeadstock.html"><font face="times" size="4" color="red">One Brain Together x Hamzat Raheem "Hamzat Collects Faces" tee</font></a></li>
-		<li><font color="red">007 - </font><a href="digitaldeadstock.html"><font face="times" size="4" color="red">Digital Deadstock Zine</font></a></li>
+		<li><font color="red">007 - </font><a href="https://zora.co/collect/0xa018f4475c9d142c644f2f916726060c4c180a19"><font face="times" size="4" color="red">Digital Deadstock Zine</font></a></li>
 		<li><font color="red">006 - </font><a href="digitaldeadstock.html"><font face="times" size="4" color="red">Digital Deadstock</font></a></li>
 		<li><font color="red">005 - </font><a href="https://gatekeep.it/acbe5c6dc4"><font face="times" size="4" color="red">OBTNYC</font></a></li>	
 		<li><font color="red">004 - </font><a href="https://gatekeep.it/5abba34a35"><font face="times" size="4" color="red">OBTLA</font></a></li>	
 		<li><font color="red">003 - </font><a href="middleground.html"><font face="times" size="4" color="red">Middleground</font></a></li>	
         	<li><font color="red">002 - </font><a href="obt.html"><font face="times" size="4" color="red">Obt.</font></a></li>
-		<li><font color="red">001 - </font><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS</font></a></li>
-			
-		</ul>
-		        <hr style="border: 1px solid rgb(2, 2, 2);">
+		<li><font color="red">001 - </font><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS</font></a></li>	
+	</ul>
         
 </header>
 </body>
