--- a/digitaldeadstock/hamzat.html
+++ b/digitaldeadstock/hamzat.html
@@ -63,35 +63,35 @@
 
 <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="digitaldeadstock/obtxhcf.png" style="width:100%">
+    <img src="obtxhcf.png" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="digitaldeadstock/hamzat phone.jpg" style="width:100%">
+    <img src="hamzat phone.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="digitaldeadstock/IMG_3098.jpg" style="width:100%">
+    <img src="IMG_3098.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="digitaldeadstock/IMG_3117.jpg" style="width:100%">
+    <img src="IMG_3117.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="digitaldeadstock/IMG_3122.jpg" style="width:100%">
+    <img src="IMG_3122.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="digitaldeadstock/IMG_3119.jpg" style="width:100%">
+    <img src="IMG_3119.jpg" style="width:100%">
   </div>
   
   <div class="mySlides fade">
-    <img src="digitaldeadstock/IMG_3131.jpg" style="width:100%">
+    <img src="IMG_3131.jpg" style="width:100%">
   </div>
 
   <div class="mySlides fade">
-    <img src="digitaldeadstock/glowshirt.jpg" style="width:100%">
+    <img src="glowshirt.jpg" style="width:100%">
   </div>
 </div>
 
