--- a/digitaldeadstock/hamzat.html
+++ b/digitaldeadstock/hamzat.html
@@ -55,7 +55,7 @@
 <body>
 	<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
 
-	<h2><font color="#ff3400">Hamzat Collects Faces Tee</font></h2>
+	<h2><font color="#ff3400">One Brain Together x Hamzat Raheem "Hamzat Collects Faces" Tee</font></h2>
 
 	<a href="https://www.onebraintogether.com/distro" target="_blank"><button style="background-color: red; color: white; padding: 10px;">AVAILABLE NOW - CLICK HERE</button></a>
 
