--- a/digitaldeadstock/hamzat.html
+++ b/digitaldeadstock/hamzat.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="digitaldeadstockcss.css">
 	<link rel="icon" type="image/x-icon" href="IWW.png">
 
-	<title>One Brain Together - Digital Deadstock</title>
+	<title>One Brain Together - One Brain Together x Hamzat Raheem "Hamzat Collects Faces" Tee</title>
 
 <style>
 	/* Slideshow container */
@@ -43,12 +43,12 @@
 		object-fit: cover;
 		aspect-ratio: 1/1; /* Forces square aspect ratio */
 	}
-
+	
+	h1 {
+ 	 	color: blue;
+  		font-family: times;
+  		font-size: 240%;
 </style>
-
-
-
-
 </head>
 
 
