--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Instagram</font></a>
         <h2>PROJECT & EVENT ARCHIVE</h2>
         
         <ul>
-		<li><font color="red">008 - </font><a href="hamzat.html"><font face="times" size="4" color="red">One Brain Together x Hamzat Raheem "Hamzat Collects Faces" Tee</font></a></li>
+		<li><font color="red">008 - </font><a href="digitaldeadstock/hamzat.html"><font face="times" size="4" color="red">One Brain Together x Hamzat Raheem "Hamzat Collects Faces" Tee</font></a></li>
 		<li><font color="red">007 - </font><a href="https://zora.co/collect/0xa018f4475c9d142c644f2f916726060c4c180a19"><font face="times" size="4" color="red">Digital Deadstock Zine</font></a></li>
 		<li><font color="red">006 - </font><a href="digitaldeadstock.html"><font face="times" size="4" color="red">Digital Deadstock</font></a></li>
 		<li><font color="red">005 - </font><a href="https://gatekeep.it/acbe5c6dc4"><font face="times" size="4" color="red">OBTNYC</font></a></li>	
