--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ Instagram</font></a>
         <h2>PROJECT & EVENT ARCHIVE</h2>
         
         <ul>
+		<li><font color="red">011 - </font><a href="https://thereforeyou.org"><font face="times" size="4" color="red">ThereforeYou.org</font></a></li>
+		<li><font color="red">010 - </font><a href="https://zora.co/collect/zora:0xfd495a75e24b5564db6224a12018805e140e80b2"><font face="times" size="4" color="red">INITIATION Sticker</font></a></li>
+		<li><font color="red">009 - </font><a href="https://zora.co/collect/zora:0x887b206cf7cf2e6a824b39caf3d003383c5290da"><font face="times" size="4" color="red">RITUAL UNITY Sticker</font></a></li>
 		<li><font color="red">008 - </font><a href="digitaldeadstock/hamzat.html"><font face="times" size="4" color="red">One Brain Together x Hamzat Raheem "Hamzat Collects Faces" Tee</font></a></li>
 		<li><font color="red">007 - </font><a href="https://zora.co/collect/0xa018f4475c9d142c644f2f916726060c4c180a19"><font face="times" size="4" color="red">Digital Deadstock Zine</font></a></li>
 		<li><font color="red">006 - </font><a href="digitaldeadstock.html"><font face="times" size="4" color="red">Digital Deadstock</font></a></li>
