--- a/distro.html
+++ b/distro.html
@@ -20,351 +20,144 @@
 	<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
 
 	<h2><font color="#ff3400">DISTRO</font></h2>
-	<p><i>Official webstore v1 2023<br>All orders will be shipped within 1-2 weeks of being placed<br>Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries</p>
+	<p><i>Official webstore v1.2 2024<br>All orders will be shipped within 1-2 weeks of being placed<br>Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries</p>
 <table>
-  <tr>
-    <td>
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/987f39bc8ed002fd4df23693d149b9d56e7ad1e8/original.png" alt="OBT Digital Deadstock Bundle" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">OBT Digital Deadstock Bundle</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$39.99 - $49.99</p>
-    <a target="_blank" href="https://square.link/u/Myma2iYP?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div>
-</td>
-
-<td>  
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/48f519660c1560f2f1e5e7f8b78b0cf6c090f0e0/original.png" alt="Digital Deadstock Zine" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">Digital Deadstock Zine</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$19.99</p>
-    <a target="_blank" href="https://square.link/u/ZiDEVuFX?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div>
-</td>
-
-<td>
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/3a573fab09ff20031929cb91eaa0c6d698fd1c47/original.png" alt="OBT x Hamzat Raheem &quot;Hamzat Collects Faces&quot; Tee" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">OBT x Hamzat Raheem "Hamzat Collects Faces" Tee</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$29.99</p>
-    <a target="_blank" href="https://square.link/u/lyyjvCNg?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div>
-</td> 
-</tr>
-
-<tr>
-<td>
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/05330f9ca27d934cc1faac31a16852b9ddd41ab0/original.png" alt="OBT Blue/White Tee (L)" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">OBT Blue/White Tee (L)</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$24.99</p>
-    <a target="_blank" href="https://square.link/u/sd1cN3Go?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div>
-</td>
-
-<td>
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/222b1ddfe47f13bab77e42d9e30813459f8f557b/original.png" alt="OBT White/Red Tee (L)" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">OBT White/Red Tee (L)</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$24.99</p>
-    <a target="_blank" href="https://square.link/u/wdJl8onP?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div>
-</td>
-
-<td>
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/799381ee03a0e8754039946c3ec56afc4062c585/original.png" alt="OBT Teal/White Tee (M)" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">OBT Teal/White Tee (M)</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$24.99</p>
-    <a target="_blank" href="https://square.link/u/q5eu0kYq?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div></td>
-  </tr>
-
-  <tr>
-    <td><div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/ea206562ee5f999b7cbe0880e1cbc41fad5c4082/original.png" alt="OBT Gray/Black Sweatshirt (2XL)" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">OBT Gray/Black Sweatshirt (2XL)</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$34.99</p>
-    <a target="_blank" href="https://square.link/u/md2n1S2o?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div></td>
-
-    <td><div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/e08f549567d603c41cf60536400a20de3e6d3672/original.png" alt="OBT White/Black Hoodie (XL)" onerror="this.style.display='none'" style="width: 100%;">
-  <div style="padding: 20px;">
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-  ">OBT White/Black Hoodie (XL)</p>
-      <p style="
-    font-size: 18px;
-    line-height: 20px;
-    font-weight: 600;
-  ">$34.99</p>
-    <a target="_blank" href="https://square.link/u/50mdHNGa?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #ffffff;
-    min-width: 212px;
-    background-color: #3400ff;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 50px;
-  ">Buy now</a>
-  </div>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-</div></td>
-    <td></td>
-  </tr>
-
+	<tr>
+   	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		  <div style="padding: 20px;">
+		    <a target="_blank" href="https://square.link/u/SKSU7MNy?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #006aff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 6px;
+		  ">Buy now</a>
+		  </div>
+		</div>
+	</td>
+	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		  <div style="padding: 20px;">
+		    <a target="_blank" href="https://square.link/u/r29VrDCV?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #006aff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 6px;
+		  ">Buy now</a>
+		  </div>
+		</div>
+	</td>
+	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		  <div style="padding: 20px;">
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">It's Over/We're Back Pants</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$49.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #3400ff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 50px;
+		  ">Buy now</a>
+		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
+		</div>
+	</td>
+	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		  <div style="padding: 20px;">
+		    <a target="_blank" href="https://square.link/u/0WigiNqZ?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #006aff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 6px;
+		  ">Buy now</a>
+		  </div>
+		</div>
+	</td>
+	</tr>
 </table>
-
-
 </body>
 <hr style="border: 1px solid rgb(2, 2, 2);">
 <footer>
-© 2023 One Brain Together
+© 2024 One Brain Together
 </html>
