--- a/distro.html
+++ b/distro.html
@@ -20,7 +20,7 @@
 	<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
 
 	<h2><font color="#ff3400">DISTRO</font></h2>
-	<p><i>Official webstore v1.2 2024<br>All orders will be shipped within 1-2 weeks of being placed<br>Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries</p>
+	<p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</p>
 <table>
 	<tr>
    	<td>
@@ -38,7 +38,7 @@
 		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
 		  <div style="padding: 20px;">
-		    <a target="_blank" href="https://square.link/u/SKSU7MNy?src=embed" style="
+		    <a target="_blank" href="https://square.link/u/vK9Ihpoh?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
@@ -68,7 +68,7 @@
 		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
 		  <div style="padding: 20px;">
-		    <a target="_blank" href="https://square.link/u/r29VrDCV?src=embed" style="
+		    <a target="_blank" href="https://square.link/u/tO5x6Wxa?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
@@ -139,7 +139,7 @@
 		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
 		  <div style="padding: 20px;">
-		    <a target="_blank" href="https://square.link/u/0WigiNqZ?src=embed" style="
+		    <a target="_blank" href="https://square.link/u/HiHdY6J2?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
