--- a/distro.html
+++ b/distro.html
@@ -35,22 +35,33 @@
 		  border: 1px solid rgba(0, 0, 0, 0.1);
 		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
 		  border-radius: 10px;
-		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
 		  <div style="padding: 20px;">
-		    <a target="_blank" href="https://square.link/u/vK9Ihpoh?src=embed" style="
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">Souljaism Tee</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$39.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
 		    height: 48px;
 		    color: #ffffff;
 		    min-width: 212px;
-		    background-color: #006aff;
+		    background-color: #3400ff;
 		    text-align: center;
 		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-		    border-radius: 6px;
+		    border-radius: 50px;
 		  ">Buy now</a>
 		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 		</div>
 	</td>
 	<td>
@@ -65,22 +76,33 @@
 		  border: 1px solid rgba(0, 0, 0, 0.1);
 		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
 		  border-radius: 10px;
-		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
 		  <div style="padding: 20px;">
-		    <a target="_blank" href="https://square.link/u/tO5x6Wxa?src=embed" style="
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">It's Over/We're Back Tee</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$49.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
 		    height: 48px;
 		    color: #ffffff;
 		    min-width: 212px;
-		    background-color: #006aff;
+		    background-color: #3400ff;
 		    text-align: center;
 		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-		    border-radius: 6px;
+		    border-radius: 50px;
 		  ">Buy now</a>
 		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 		</div>
 	</td>
 	<td>
@@ -136,22 +158,33 @@
 		  border: 1px solid rgba(0, 0, 0, 0.1);
 		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
 		  border-radius: 10px;
-		  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
 		  <div style="padding: 20px;">
-		    <a target="_blank" href="https://square.link/u/HiHdY6J2?src=embed" style="
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">It's Over/We're Back Shorts</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$24.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
 		    height: 48px;
 		    color: #ffffff;
 		    min-width: 212px;
-		    background-color: #006aff;
+		    background-color: #3400ff;
 		    text-align: center;
 		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-		    border-radius: 6px;
+		    border-radius: 50px;
 		  ">Buy now</a>
 		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 		</div>
 	</td>
 	</tr>
