--- a/distro.html
+++ b/distro.html
@@ -52,7 +52,7 @@
         }
     </script>
 
-    <a href="cart.html" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #3400ff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 50px;">View Cart</a>
+    <a href="distro/cart.html" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #3400ff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 50px;">View Cart</a>
 
     <hr style="border: 1px solid rgb(2, 2, 2);">
     <footer>© 2024 One Brain Together</footer>
