--- a/distro.html
+++ b/distro.html
@@ -23,9 +23,9 @@
                 <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;">
                     <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
                     <div style="padding: 20px;">
-                        <p style="font-size: 18px; line-height: 20px;">Souljaism Tee</p>
-                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$39.99</p>
-                        <button onclick="addToCart('Souljaism Tee', 39.99)" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #3400ff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 50px;">Add to Cart</button>
+                        <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Tee</p>
+                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$34.99</p>
+                        <button onclick="addToCart('It:s Over We:re Back Tee', 34.99)" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #3400ff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 50px;">Add to Cart</button>
                     </div>
                     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
                 </div>
