--- a/distro.html
+++ b/distro.html
@@ -1,60 +1,196 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>One Brain Together - Distro Webstore</title>
-    <link rel="icon" type="image/x-icon" href="IWW.png">
-    <style>
-        table, th, td {
-            border: 1px solid black;
-            border-radius: 10px;
-        }   
-    </style>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<title>One Brain Together - Distro Webstore</title>
+	<link rel="icon" type="image/x-icon" href="IWW.png">
+
+
+	<style>
+		table, th, td {
+  		border: 1px solid black;
+  		border-radius: 10px;
+	}	
+	</style>
+
+		
 </head>
+
 <body>
-    <h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
-    <h2><font color="#ff3400">DISTRO</font></h2>
-    <p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</p>
-    
-    <table>
-        <tr>
-            <!-- Item 1 -->
-            <td>
-                <div style="overflow: auto; display: flex; flex-direction: column; justify-content: flex-end; align-items: center; width: 259px; background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.1); box-shadow: -2px 10px 5px rgba(0, 0, 0, 0); border-radius: 10px; font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;">
-                    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
-                    <div style="padding: 20px;">
-                        <p style="font-size: 18px; line-height: 20px;">It's Over/We're Back Tee</p>
-                        <p style="font-size: 18px; line-height: 20px; font-weight: 600;">$34.99</p>
-                        <button onclick="addToCart('It:s Over We:re Back Tee', 34.99)" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #3400ff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 50px;">Add to Cart</button>
-                    </div>
-                    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-                </div>
-            </td>
-            <!-- Add more items here in the same format -->
-        </tr>
-    </table>
+	<h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
 
-    <script>
-        function addToCart(name, price) {
-            let cart = JSON.parse(localStorage.getItem('cart')) || [];
-            cart.push({ name: name, price: price });
-            localStorage.setItem('cart', JSON.stringify(cart));
-            alert(name + ' has been added to your cart.');
-        }
-
-        function getCart() {
-            return JSON.parse(localStorage.getItem('cart')) || [];
-        }
-
-        function calculateCartTotal() {
-            const cart = getCart();
-            return cart.reduce((total, item) => total + item.price, 0).toFixed(2);
-        }
-    </script>
-
-    <a href="distro/cart.html" style="display: inline-block; font-size: 18px; line-height: 48px; height: 48px; color: #ffffff; min-width: 212px; background-color: #3400ff; text-align: center; box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset; border-radius: 50px;">View Cart</a>
-
-    <hr style="border: 1px solid rgb(2, 2, 2);">
-    <footer>© 2024 One Brain Together</footer>
+	<h2><font color="#ff3400">DISTRO</font></h2>
+	<p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</p>
+<table>
+	<tr>
+   	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		  <div style="padding: 20px;">
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">Souljaism Tee</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$39.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #3400ff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 50px;
+		  ">Buy now</a>
+		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
+		</div>
+	</td>
+	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		  <div style="padding: 20px;">
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">It's Over/We're Back Tee</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$49.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #3400ff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 50px;
+		  ">Buy now</a>
+		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
+		</div>
+	</td>
+	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		  <div style="padding: 20px;">
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">It's Over/We're Back Pants</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$49.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #3400ff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 50px;
+		  ">Buy now</a>
+		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
+		</div>
+	</td>
+	<td>
+		<div style="
+		  overflow: auto;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: flex-end;
+		  align-items: center;
+		  width: 259px;
+		  background: #FFFFFF;
+		  border: 1px solid rgba(0, 0, 0, 0.1);
+		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+		  border-radius: 10px;
+		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+		  ">
+		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		  <div style="padding: 20px;">
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		  ">It's Over/We're Back Shorts</p>
+		      <p style="
+		    font-size: 18px;
+		    line-height: 20px;
+		    font-weight: 600;
+		  ">$24.99</p>
+		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    display: inline-block;
+		    font-size: 18px;
+		    line-height: 48px;
+		    height: 48px;
+		    color: #ffffff;
+		    min-width: 212px;
+		    background-color: #3400ff;
+		    text-align: center;
+		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+		    border-radius: 50px;
+		  ">Buy now</a>
+		  </div>
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
+		</div>
+	</td>
+	</tr>
+</table>
 </body>
+<hr style="border: 1px solid rgb(2, 2, 2);">
+<footer>
+© 2024 One Brain Together
 </html>
