--- a/distro.html
+++ b/distro.html
@@ -23,47 +23,6 @@
 	<p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</p>
 <table>
 	<tr>
-   	<td>
-		<div style="
-		  overflow: auto;
-		  display: flex;
-		  flex-direction: column;
-		  justify-content: flex-end;
-		  align-items: center;
-		  width: 259px;
-		  background: #FFFFFF;
-		  border: 1px solid rgba(0, 0, 0, 0.1);
-		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-		  border-radius: 10px;
-		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-		  ">
-		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
-		  <div style="padding: 20px;">
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		  ">Souljaism Tee</p>
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		    font-weight: 600;
-		  ">$39.99</p>
-		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
-		    display: inline-block;
-		    font-size: 18px;
-		    line-height: 48px;
-		    height: 48px;
-		    color: #ffffff;
-		    min-width: 212px;
-		    background-color: #3400ff;
-		    text-align: center;
-		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-		    border-radius: 50px;
-		  ">Buy now</a>
-		  </div>
-		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-		</div>
-	</td>
 	<td>
 		<div style="
 		  overflow: auto;
@@ -78,7 +37,7 @@
 		  border-radius: 10px;
 		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
-		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		    <img src="distro/iowb tee front.png" alt="It's Over/We're Back Tee" onerror="this.style.display='none'" style="width: 100%;">
 		  <div style="padding: 20px;">
 		      <p style="
 		    font-size: 18px;
@@ -88,7 +47,7 @@
 		    font-size: 18px;
 		    line-height: 20px;
 		    font-weight: 600;
-		  ">$49.99</p>
+		  ">$34.99</p>
 		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
@@ -119,7 +78,7 @@
 		  border-radius: 10px;
 		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
-		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		    <img src="distro/iowb pants front.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
 		  <div style="padding: 20px;">
 		      <p style="
 		    font-size: 18px;
@@ -129,7 +88,7 @@
 		    font-size: 18px;
 		    line-height: 20px;
 		    font-weight: 600;
-		  ">$49.99</p>
+		  ">$44.99</p>
 		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
@@ -160,7 +119,7 @@
 		  border-radius: 10px;
 		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
 		  ">
-		    <img src="https://items-images-production.s3.us-west-2.amazonaws.com/files/35b35d1139e007454fbed2d3da531fcbbcd76178/original.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
+		    <img src="distro/iowb shorts front.png" alt="It's Over/We're Back Shorts" onerror="this.style.display='none'" style="width: 100%;">
 		  <div style="padding: 20px;">
 		      <p style="
 		    font-size: 18px;
