--- a/distro.html
+++ b/distro.html
@@ -48,7 +48,7 @@
 		    line-height: 20px;
 		    font-weight: 600;
 		  ">$34.99</p>
-		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    <a target="_blank" href="https://square.link/u/xXqAKQJA?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
@@ -89,7 +89,7 @@
 		    line-height: 20px;
 		    font-weight: 600;
 		  ">$44.99</p>
-		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    <a target="_blank" href="https://square.link/u/YsJqFVbX?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
@@ -130,7 +130,7 @@
 		    line-height: 20px;
 		    font-weight: 600;
 		  ">$24.99</p>
-		    <a target="_blank" href="https://square.link/u/2kAF3Ic1?src=embed" style="
+		    <a target="_blank" href="https://square.link/u/YsJqFVbX?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
