--- a/distro.html
+++ b/distro.html
@@ -130,7 +130,7 @@
 		    line-height: 20px;
 		    font-weight: 600;
 		  ">$24.99</p>
-		    <a target="_blank" href="https://square.link/u/YsJqFVbX?src=embed" style="
+		    <a target="_blank" href="https://square.link/u/Oz6XvMpT?src=embed" style="
 		    display: inline-block;
 		    font-size: 18px;
 		    line-height: 48px;
