--- a/distro.html
+++ b/distro.html
@@ -64,47 +64,51 @@
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 		</div>
 	</td>
-	<td>
-		<div style="
-		  overflow: auto;
-		  display: flex;
-		  flex-direction: column;
-		  justify-content: flex-end;
-		  align-items: center;
-		  width: 259px;
-		  background: #FFFFFF;
-		  border: 1px solid rgba(0, 0, 0, 0.1);
-		  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-		  border-radius: 10px;
-		  font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
-		  ">
-		    <img src="distro/iowb pants front.png" alt="It's Over/We're Back Pants" onerror="this.style.display='none'" style="width: 100%;">
-		  <div style="padding: 20px;">
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		  ">It's Over/We're Back Pants</p>
-		      <p style="
-		    font-size: 18px;
-		    line-height: 20px;
-		    font-weight: 600;
-		  ">$44.99</p>
-		    <a target="_blank" href="https://square.link/u/YsJqFVbX?src=embed" style="
-		    display: inline-block;
-		    font-size: 18px;
-		    line-height: 48px;
-		    height: 48px;
-		    color: #ffffff;
-		    min-width: 212px;
-		    background-color: #3400ff;
-		    text-align: center;
-		    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-		    border-radius: 50px;
-		  ">Buy now</a>
-		  </div>
-		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
-		</div>
-	</td>
+<td>
+    <div style="
+      overflow: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: center;
+      width: 259px;
+      background: #FFFFFF;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+      border-radius: 10px;
+      font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+      ">
+        <img id="product-image" src="distro/iowb pants front.png" alt="It's Over/We're Back Pants" style="width: 100%;">
+        <div style="padding: 20px;">
+            <div style="display: flex; justify-content: center;">
+                <img src="distro/iowb pants front.png" alt="Front View" onclick="changeImage('distro/iowb pants front.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
+                <img src="distro/iowb pants back.png" alt="Test Image" onclick="changeImage('distro/iown pants back.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
+            </div>
+            <p style="
+            font-size: 18px;
+            line-height: 20px;
+          ">It's Over/We're Back Pants</p>
+            <p style="
+            font-size: 18px;
+            line-height: 20px;
+            font-weight: 600;
+          ">$44.99</p>
+            <button onclick="addToCart('It\'s Over/We\'re Back Pants', 44.99)" style="
+            display: inline-block;
+            font-size: 18px;
+            line-height: 48px;
+            height: 48px;
+            color: #ffffff;
+            min-width: 212px;
+            background-color: #3400ff;
+            text-align: center;
+            box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+            border-radius: 50px;
+          ">Buy Now</button>
+        </div>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
+    </div>
+</td>
 	<td>
 		<div style="
 		  overflow: auto;
