--- a/distro.html
+++ b/distro.html
@@ -150,6 +150,13 @@
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM Plex Mono">
 		</div>
 	</td>
+
+	<script>
+    		function changeImage(src) {
+        		document.getElementById('product-image').src = src;
+    		}
+	</script>
+	
 	</tr>
 </table>
 </body>
