--- a/distro.html
+++ b/distro.html
@@ -82,7 +82,7 @@
         <div style="padding: 20px;">
             <div style="display: flex; justify-content: center;">
                 <img src="distro/iowb pants front.png" alt="Front View" onclick="changeImage('distro/iowb pants front.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
-                <img src="distro/iowb pants back.png" alt="Test Image" onclick="changeImage('distro/iown pants back.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
+                <img src="distro/iowb pants back.png" alt="Back View" onclick="changeImage('distro/iown pants back.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
             </div>
             <p style="
             font-size: 18px;
@@ -151,10 +151,32 @@
 		</div>
 	</td>
 
+
 	<script>
-    		function changeImage(src) {
-        		document.getElementById('product-image').src = src;
-    		}
+	    const images = [
+	        'distro/iowb tee front.png',
+	        'distro/iowb tee back.png',
+		'distro/iowb pants front.png',
+	        'distro/iowb pants back.png',
+		'distro/iowb shorts front.png',
+	        'distro/iowb shorts back.png',
+	    ];
+	    let currentImageIndex = 0;
+	
+	    function showImage(index) {
+	        const img = document.getElementById('product-image');
+	        img.src = images[index];
+	    }
+	
+	    function prevImage() {
+	        currentImageIndex = (currentImageIndex - 1 + images.length) % images.length;
+	        showImage(currentImageIndex);
+	    }
+	
+	    function nextImage() {
+	        currentImageIndex = (currentImageIndex + 1) % images.length;
+	        showImage(currentImageIndex);
+	    }
 	</script>
 	
 	</tr>
