--- a/distro.html
+++ b/distro.html
@@ -82,7 +82,7 @@
         <div style="padding: 20px;">
             <div style="display: flex; justify-content: center;">
                 <img src="distro/iowb pants front.png" alt="Front View" onclick="changeImage('distro/iowb pants front.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
-                <img src="distro/iowb pants back.png" alt="Back View" onclick="changeImage('distro/iown pants back.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
+                <img src="distro/iowb pants back.png" alt="Back View" onclick="changeImage('distro/iowb pants back.png')" style="width: 50px; cursor: pointer; margin: 0 5px;">
             </div>
             <p style="
             font-size: 18px;
