--- a/distro.html
+++ b/distro.html
@@ -6,6 +6,9 @@
     <link rel="icon" type="image/x-icon" href="IWW.png">
 
     <style>
+        body {
+            font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+        }
         table, th, td {
             border: 1px solid black;
             border-radius: 10px;
@@ -22,7 +25,7 @@
             border: 1px solid rgba(0, 0, 0, 0.1);
             box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
             border-radius: 10px;
-            font-family: IBM Plex Mono, SQ Market, Helvetica, Arial, sans-serif;
+            margin: 10px;
         }
         .arrow {
             position: absolute;
@@ -43,6 +46,30 @@
         .product:hover .arrow {
             opacity: 1;
         }
+
+        @media (max-width: 768px) {
+            table, th, td {
+                border: none;
+            }
+            table {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+            td {
+                display: flex;
+                justify-content: center;
+                width: 100%;
+            }
+            .product {
+                width: 90%;
+                max-width: 300px;
+            }
+            .arrow {
+                font-size: 18px;
+            }
+        }
     </style>
 </head>
 
@@ -50,7 +77,7 @@
     <h1><a href="https://onebraintogether.com"><font color="#3400ff">One Brain Together</font></a></h1>
 
     <h2><font color="#ff3400">DISTRO</font></h2>
-    <p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</p>
+    <p><i>Official webstore v1.2 2024<br>Allow 1 week for shipping. Please <a href="mailto:onebraintogether@gmail.com">email</a> or <a href="https://instagram.com/onebraintogether">DM</a> with any inquiries.</i></p>
     
     <table>
         <tr>
